<resources>
    <string name="app_name">ProductDetailsrInformation</string>
    <string name="input_the_product_id">Input the product ID...</string>
    <string name="submit">Submit</string>
    <string name="essence">Essence</string>
    <string name="essence_mascara_lash_princess">Essence Mascara\n Lash Princess</string>
    <string name="_4_94_3_reviews">4.94(3 reviews)</string>
    <string name="_9_99">$9.99</string>
    <string name="_10_76"><s>$10.76</s></string>
    <string name="_7_17_off">7.17% OFF</string>
    <string name="product_details">Product Details</string>
    <string name="product_description">The Essence Mascara Lash Princess is\n
a popular mascara known for its\n
volumizing and lengthening effects.\n
Achieve dramatic lashes with this long-\n
lasting and cruelty-free formula.</string>
    <string name="low_in_stock_5_remains">"low in stock (5 products remains)"</string>
    <string name="sku">SKU</string>
    <string name="RCH45Q1A">RCH45Q1A</string>
    <string name="twograms">2g</string>
    <string name="weight">Weight</string>
    <string name="policy">Policy</string>
    <string name="deliver">Deliver</string>
    <string name="ships_in_1_month">Ships in 1 month</string>
    <string name="warranty">Warranty</string>
    <string name="_1_month">1 month</string>
    <string name="return_and_exchange">return_and_exchange</string>
    <string name="comments">Comments</string>
    <string name="view_all">View all</string>
    <string name="john_doe">John Doe</string>
    <string name="very_unhappy_with_my_purchase">Very unhappy with my purchase!</string>
    <string name="nolan_gonzalez">Nolan Gonzalez</string>
    <string name="not_as_described">Not as described!</string>
    <string name="scarlett_wright">Scarlett Wright</string>
    <string name="very_satisfied">Very satisfied!</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="buy_now">Buy Now</string>
    <string name="apple_i_n_tho_i">APPLE • PHONE</string>
    <string name="iphone_15_pro_max_256gb">iPhone 15 Pro Max 256GB</string>
    <string name="_4_8">4.8</string>
    <string name="_1199">$1199</string>
    <string name="_1055">$1055</string>
    <string name="hp_laptop">HP • LAPTOP</string>
    <string name="hp_spectre_x360_14_inch">HP Spectre x360 14 inch</string>
    <string name="_4_5">4.5</string>
    <string name="_1499">$1499</string>
    <string name="sony_ph_ki_n">SONY • ASCESSORIES</string>
    <string name="sony_wh_1000xm5_earphone">Sony WH-1000XM5 EarPhone</string>
    <string name="_4_9">4.9</string>
    <string name="_398">$398</string>
    <string name="samsung_smartwatch">SAMSUNG • SMARTWATCH</string>
    <string name="samsung_galaxy_watch_6">Samsung Galaxy Watch 6</string>
    <string name="_4_6">4.6</string>
    <string name="_299">$299</string>
    <string name="_284">$284</string>


</resources>