<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDF9F8"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutDescription="@xml/activity_main_xml_constraintlayout_scene">

        <EditText
            android:id="@+id/IDinput"
            android:layout_width="230dp"
            android:layout_height="55dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/text_input_layout_background"
            android:hint="@string/input_the_product_id"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="#1B1C1C"/>


        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:text="@string/submit"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/IDinput"
            app:layout_constraintStart_toEndOf="@id/IDinput" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/thumbnail1"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="110dp" />

        <ImageView
            android:id="@+id/background1"
            android:layout_width="342dp"
            android:layout_height="264dp"
            android:layout_marginTop="566dp"
            android:src="@drawable/product_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/brand"
            android:text="@string/essence"
            app:layout_constraintTop_toTopOf="@id/background1"
            app:layout_constraintStart_toStartOf="@id/background1"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:textSize="12sp"
            android:textColor="#7B5455"/>

        <TextView
            android:id="@+id/product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/essence_mascara_lash_princess"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/brand"
            app:layout_constraintStart_toStartOf="@id/brand"
            android:textSize="32sp"
            android:textColor="#1B1C1C"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reviewstars"
            app:layout_constraintTop_toBottomOf="@id/product_name"
            app:layout_constraintStart_toStartOf="@id/product_name"
            android:src="@drawable/review_stars"
            android:layout_marginTop="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reviewpoint"
            android:text="@string/_4_94_3_reviews"
            app:layout_constraintTop_toBottomOf="@id/product_name"
            app:layout_constraintStart_toEndOf="@id/reviewstars"
            android:layout_marginTop="2dp"
            android:layout_marginStart="10dp"
            android:textSize="14sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/price_after_discount"
            android:text="@string/_9_99"
            app:layout_constraintTop_toBottomOf="@id/reviewstars"
            app:layout_constraintStart_toStartOf="@id/reviewstars"
            android:layout_marginTop="5dp"
            android:textSize="28sp"
            android:textColor="#7B5455"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/before_discount_price"
            android:text="@string/_10_76"
            app:layout_constraintTop_toBottomOf="@id/reviewstars"
            app:layout_constraintStart_toEndOf="@id/reviewstars"
            android:layout_marginTop="5dp"
            android:textSize="16sp"
            android:textColor="#504444"
            />

    </androidx.constraintlayout.motion.widget.MotionLayout>
</ScrollView>
